list features added with data table and pagination

--- a/src/assets/scss/config/_variables.scss
+++ b/src/assets/scss/config/_variables.scss
@@ -84,7 +84,7 @@ $info: $purple;
 $light: $gray-200;
 $dark: $gray-900;
 // scss-docs-end theme-color-variables
-
+$main : #27CBBE;
 // scss-docs-start gray-colors-map
 $grays: (
   "100": $gray-100,
