--- a/src/assets/scss/structure/_sidebar.scss
+++ b/src/assets/scss/structure/_sidebar.scss
@@ -11,7 +11,10 @@
      transition: all 0.3s ease-in-out;
      line-height: $topbar-height;
      padding: 0 calc($sidebar-width-sm * 0.5 - $logo-sm-height * 0.5);
- 
+     h2{
+        font-size: 25px;
+        padding: 20px ;
+     }
      .logo-sm {
          display: none;
          height: $logo-sm-height;
